# cobrizi-api

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  ruff.toml
app/: db.py  main.py
app/auth/: dependencies.py  jwt.py
app/models/: __init__.py  associate.py  invoice.py  invoice_item.py  item.py  item_property.py  remission.py  remission_item.py  remission_item_property.py  user.py  user_associate.py
app/routers/: associates.py  auth.py  invoices.py  items.py  remissions.py  users.py
app/schemas/: __init__.py  associate.py  invoice.py  item.py  remission.py  user.py  user_associate.py
app/services/: email.py  pdf_invoice.py  pdf_remission.py
